# OpenIA

./: .gitignore  README.md  ia-assistant-whitepaper.docx  pyproject.toml
.github/workflows/: release-desktop.yml
openia/: __init__.py  agent.py  bitcoin_integration.py  cardrails_stub.py  chain_judgment.py  cli.py  coinbit_adapter.py  judge.py  market.py  market_analytics.py  monero_integration.py  network_immunity.py  recycling.py  transaction.py
tests/: test_cardrails_stub.py  test_chain_judgment.py  test_coinbit_adapter.py  test_market.py  test_monero_integration.py  test_openia.py
